--- a/Csharp/BlazorInAction/BlazingTrails/BlazingTrails.Client/Features/ManageTrails/EditTrail/EditTrailPage.razor
+++ b/Csharp/BlazorInAction/BlazingTrails/BlazingTrails.Client/Features/ManageTrails/EditTrail/EditTrailPage.razor
@@ -58,13 +58,9 @@ else
             _trail.Image = trail.Image;
             _trail.Length = trail.Length;
             _trail.TimeInMinutes = trail.TimeInMinutes;
-            _trail.Route.Clear();
-            _trail.Route.AddRange(trail.RouteInstructions.Select(ri =>
-                new TrailDto.RouteInstruction
-                {
-                    Stage = ri.Stage,
-                    Description = ri.Description
-                }));
+            _trail.Waypoints.Clear();
+            _trail.Waypoints.AddRange(trail.Waypoints.Select(waypoint =>
+                new TrailDto.WaypointDto(waypoint.Latitude, waypoint.Longitude)));
         }
         else
         {
@@ -89,12 +85,8 @@ else
             _trail.Location = trail.Location;
             _trail.Length = trail.Length;
             _trail.TimeInMinutes = trail.TimeInMinutes;
-            _trail.Route.AddRange(trail.Route.Select(ri =>
-                new TrailDto.RouteInstruction
-                {
-                    Stage = ri.Stage,
-                    Description = ri.Description
-                }));
+            _trail.Waypoints.AddRange(trail.Waypoints.Select(waypoint =>
+                new TrailDto.WaypointDto(waypoint.Latitude, waypoint.Longitude)));
             
             _submitSuccessful = true;
 
