--- a/Csharp/BlazorInAction/BlazingTrails/BlazingTrails.Client/Features/ManageTrails/Shared/TrailForm.razor
+++ b/Csharp/BlazorInAction/BlazingTrails/BlazingTrails.Client/Features/ManageTrails/Shared/TrailForm.razor
@@ -1,3 +1,4 @@
+@using BlazingTrails.ComponentLibrary.Map
 @using MediatR
 @inject IMediator Mediator
 
@@ -72,56 +73,10 @@
         </FormFieldSet>
     </FormSection>
 
-    <FormSection Title="Route Instructions"
-    HelpText="Route instructions are a guide for the trail. This helps hikers new to the trail stay on track.">
-        @{ var i = 0; }
-        @foreach (var routeInstruction in _trail.Route)
-        {
-            routeInstruction.Stage = ++i;
-
-            <div class="row">
-                <div class="col-2">
-                    <div class="form-group">
-                        <label class="font-weight-bold text-secondary">
-                            Stage
-                        </label>
-                        <p>
-                            @routeInstruction.Stage
-                        </p>
-                    </div>
-                </div>
-                
-                <div class="col">
-                    <div class="form-group">
-                        <label for="routeInstructionDescription" class="font-weight-bold text-secondary">
-                            Description
-                        </label>
-                        <InputText id="routeInstructionDescription" @bind-Value="routeInstruction.Description"
-                        class="form-control"/>
-                        <ValidationMessage For="@(() => routeInstruction.Description)" />
-                    </div>
-                </div>
-
-                <div class="col-1 d-flex mt-3">
-                    <button class="btn btn-link" type="button"
-                    @onclick="@(() => _trail.Route.Remove(routeInstruction))">
-                        <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-x-circle-fill text-danger" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
-                            <path fill-rule="evenodd" d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zM5.354 4.646a.5.5 0 1 0-.708.708L7.293 8l-2.647 2.646a.5.5 0 0 0 .708.708L8 8.707l2.646 2.647a.5.5 0 0 0 .708-.708L8.707 8l2.647-2.646a.5.5 0 0 0-.708-.708L8 7.293 5.354 4.646z" />
-                        </svg>
-                    </button>
-                </div>
-            </div>
-        }
-
-        <div class="row">
-            <div class="col">
-                <button class="btn btn-outline-primary" type="button"
-                @onclick="@(() => _trail.Route.Add(new TrailDto.RouteInstruction()))">
-                Add Instruction
-                </button>
-                <ValidationMessage For="@(() => _trail.Route)" />
-            </div>
-        </div>
+    <FormSection Title="Route"
+        HelpText="Route instructions are a guide for the trail. This helps hikers new to the trail stay on track.">
+        <InputRouteMap @bind-Value="_trail.Waypoints" />
+        <ValidationMessage For="@(() => _trail.Waypoints)" />
     </FormSection>
 
     <div class="mt-4 mb-5">
@@ -165,13 +120,9 @@
             _trail.Image = Trail.Image;
             _trail.ImageAction = ImageAction.None;
 
-            _trail.Route.Clear();
-            _trail.Route.AddRange(Trail.Route.Select(ri =>
-                new TrailDto.RouteInstruction
-                {
-                    Stage = ri.Stage,
-                    Description = ri.Description
-                }));
+            _trail.Waypoints.Clear();
+            _trail.Waypoints.AddRange(Trail.Waypoints.Select(wp =>
+                new TrailDto.WaypointDto(wp.Latitude, wp.Longitude)));
         }
     }
 
