--- a/Csharp/BlazorInAction/BlazingTrails/BlazingTrails.Client/_Imports.razor
+++ b/Csharp/BlazorInAction/BlazingTrails/BlazingTrails.Client/_Imports.razor
@@ -12,3 +12,6 @@
 @using Blazored.FluentValidation
 @using MediatR
 @using BlazingTrails.ComponentLibrary
+@using Microsoft.AspNetCore.Authorization
+@using Microsoft.AspNetCore.Components.Authorization
+@using Microsoft.AspNetCore.Components.WebAssembly.Authentication
