--- a/Csharp/BlazorInAction/BlazingTrails/BlazingTrails.Client/App.razor
+++ b/Csharp/BlazorInAction/BlazingTrails/BlazingTrails.Client/App.razor
@@ -1,4 +1,7 @@
-﻿<CascadingAuthenticationState>
+﻿@using BlazingTrails.Client.Features.State
+@inject AppState AppState
+
+<CascadingAuthenticationState>
     <Router AppAssembly="@typeof(App).Assembly">
         <Found Context="routeData">
             <AuthorizeRouteView RouteData="@routeData" DefaultLayout="@typeof(MainLayout)">
@@ -20,3 +23,13 @@
         </NotFound>
     </Router>
 </CascadingAuthenticationState>
+
+@code {
+    protected override async Task OnAfterRenderAsync(bool firstRender)
+    {
+        if (firstRender)
+        {
+            await AppState.Initialize();
+        }
+    }
+}
