--- a/Csharp/BlazorInAction/BlazingTrails/BlazingTrails.Client/Features/Auth/LoginStatus.razor
+++ b/Csharp/BlazorInAction/BlazingTrails/BlazingTrails.Client/Features/Auth/LoginStatus.razor
@@ -1,7 +1,7 @@
 @inject NavigationManager NavManager
 @inject SignOutSessionStateManager SignOutManager
 
-<div class="container text-right">
+<div class="text-right">
     <AuthorizeView>
         <Authorized>
             <div>
