--- a/Csharp/BlazorInAction/BlazingTrails/BlazingTrails.Client/_Imports.razor
+++ b/Csharp/BlazorInAction/BlazingTrails/BlazingTrails.Client/_Imports.razor
@@ -15,3 +15,4 @@
 @using Microsoft.AspNetCore.Authorization
 @using Microsoft.AspNetCore.Components.Authorization
 @using Microsoft.AspNetCore.Components.WebAssembly.Authentication
+@using BlazingTrails.Client.Features.Shared
